added hw for lecture 4

--- a/workspace-Pragmatic/HW_Arrays, classes, fields and methods/.project
+++ b/workspace-Pragmatic/HW_Arrays, classes, fields and methods/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>03_Arrays, classes, fields and methods</name>
+	<name>HW_Arrays, classes, fields and methods</name>
 	<comment></comment>
 	<projects>
 	</projects>
